Integration of terms of service and privacy policy pages
Connected the terms of service page and the privacy policy pages to the signup page as hyperlinks that must be accepted by a checkbox before signup can be pressed.

--- a/Web Pages/css/HomePageStyle.css
+++ b/Web Pages/css/HomePageStyle.css
@@ -9,7 +9,6 @@ h1{
     color:#48c77d;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
     font-size:25pt;
-    position: static;
 }
 
 .logo{
@@ -20,8 +19,10 @@ h1{
 	padding-top: 50px;
 	width: 50%;
 	float: left;
+	cursor: pointer;
 }
 .btn {
 	background: transparent;
 	border: none;
+	cursor: pointer;
 }
