--- a/Web Pages/css/AddGKStyle.css
+++ b/Web Pages/css/AddGKStyle.css
@@ -1,35 +1,95 @@
 body {
-    margin: 0;
-    font-family: "Avenir", Verdana, Geneva, sans-serif;
-    background-color: #A9A9A9; /* dark grey */
+  margin: 0;
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
 
 }
 
-.signupGK{
-    background-color: #f1f1f1; /* light grey */
-    padding-bottom: 20px;
-    height: 100%;
-    width: 700px;
-    margin-left: 25%;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 12%;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+
+
 }
 
-#firstname, #surname, #email, #username, #password, #title{
-    font-size: larger;
-    padding: 10px;
-    margin-left: 33%;
+li a {
+  display: block;
+  color: #000;
+  padding: 10px 16px;
+  text-decoration: none;
+
 }
 
-.submit-button{
-    background-color: #A9A9A9; /* dark grey */ 
-    padding: 4px 4px 4px 4px;
-    font-size: 25px;
-    margin-left: 43%;
+li a.active {
+  background-color: #A9A9A9;
+  border-right: 1px solid #AFAFAF;
+  color: white;
+}
+
+li a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+}
+
+.responsive {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
+.account{
+    margin-left:12%;
+    text-align: right;
+    padding:1px 16px;
+    font-size: 12px;
+    width: auto;
+    background-color: #f1f1f1;
+
+}
+
+.addGK-title{
+    margin-left:12%;
+    text-align: center;
+    padding:1px 16px;
+    font-size: 24px;
+    width: 88%;
+    background-color: #A9A9A9;
+
+}
+
+.GK-form{
+    margin-top: 2%;
+    margin-left:45%;
+    width: 80%;
+    padding-left: 12px;
+}
+
+#firstname, #surname, #email, #username, #password{
+    font-size: 12px;
+    padding: 8px;
+    width: 30%;
+}
+
+.submitTeamBtn{
+    margin-left: 54%;    
+    background-color: #A9A9A9;
     color: white;
+    padding: 10px 16px;
+    font-size: 15px;
+
 }
 
-.submit-button:hover {
-    background-color: #555; /*darkest grey*/
+.submitTeamBtn:hover{
+    background-color: #555;
     color: white;
+    
 
 }
+
+
 
