changing colour scheme

--- a/Web Pages/css/SignUpPageStyle.css
+++ b/Web Pages/css/SignUpPageStyle.css
@@ -1,6 +1,6 @@
 .signup{
 	box-sizing: border-box;
-	background:#48c77d;
+	background:#0A8754;
     position: static; 
 	padding: 15px;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
