--- a/Web Pages/css/HomePageStyle.css
+++ b/Web Pages/css/HomePageStyle.css
@@ -6,7 +6,7 @@ body{
 }
 
 h1{
-    color:#48c77d;
+    color:#0A8754;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
     font-size:25pt;
 }
