Updated the validation code
Update the python and HTML for running form validation for login and sign up

--- a/Login validation test app/templates/home-page.html
+++ b/Login validation test app/templates/home-page.html
@@ -14,11 +14,11 @@
 		</div>
 
         <div class="left-button">
-			<button onclick="location.href = 'login-page.html';" class="btn"><img src="static/img/login.png" alt="login"></button>
+			<button onclick="location.href= '/login-page';" class="btn"><img src="static/img/login.png" alt="login"></button>
         </div>
 
         <div class="right-button">
-			<button onclick="location.href = 'signup-page.html';" class="btn"><img src="static/img/SignUp.png" alt="signup"></button>
+			<button onclick="location.href = '/signup-page';" class="btn"><img src="static/img/SignUp.png" alt="signup"></button>
         </div>
     </body>
 </html>
