--- a/Login validation test app/templates/signup-page.html
+++ b/Login validation test app/templates/signup-page.html
@@ -40,10 +40,10 @@
 				<input type="checkbox" id="terms" name="terms" value="agree" required>
 				<label style="font-size: larger;" for="terms"> I accept the following <a target="blank" href="Terms.html">terms of service</a> and <a target = "blank" href = "Privacy.html">privacy policy</a>.</label><br>
 				<div class="left-button">
-					<button onclick="location.href = 'home-page.html';" class="btn"><img src="static/img/back.png" alt="back"></button>
+					<button onclick="location.href= '/home';" class="btn"><img src="static/img/back.png" alt="back"></button>
 				</div>
 				<div class="right-button">
-					<button class="btn"><img src="static/img/SignUp.png" alt="signup"></button>
+					<button type="submit" class="btn"><img src="static/img/SignUp.png" alt="signup"></button>
 				</div>
 			</form>
         </div>
