--- a/exeterexpeditions/exeterexpeditions/static/css/overlayui.css
+++ b/exeterexpeditions/exeterexpeditions/static/css/overlayui.css
@@ -19,6 +19,36 @@
 
 #welcome-container {
   display: none;
+
+  padding-left: 4vw;
+  padding-right: 4vw;
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
+}
+
+#welcome-exit-button {
+  padding-left: 0px;
+  padding-right: 0px;
+  margin: 0px;
+  border-width: 0px;
+
+  background-color: #0A8754;
+
+  position: sticky;
+  top: 0px;
+  left: 0px;
+
+  width: 100%;
+  height: 50px;
+
+  text-align: center;
+
+  font-size: 20px;
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
+}
+
+#welcome-button-txt {
+  padding-top: 12px;
+  color: #FFFFFF;
 }
 
 #qr-scanner-container {
@@ -31,6 +61,15 @@
 
 #map-container {
   display: none;
+
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 100%;
+	width: 100%;
 }
 
 #achievements-container {
