--- a/exeterexpeditions/exeterexpeditions/templates/index.html
+++ b/exeterexpeditions/exeterexpeditions/templates/index.html
@@ -108,7 +108,23 @@
     <div id="overlay-container" class="overlay">
 
       <div id="welcome-container">
-        This is where the welcome text will be
+        <div id="welcome-exit-button" onclick="hideOverlay(); resetButtonColours();">
+          <p id="welcome-button-txt">Start your expedition</p>
+        </div>
+        <h1>Welcome to Exeter Expeditions!</h1>
+    <h2>About:</h2>
+    <p>Exeter Expeditions is a treasure hunt that introduces you to the Streatham campus of the University of Exeter.</p>
+    <p>Join the members of your tutor group to explore campus and earn points along the way.</p>
+    <h2>How to Play:</h2>
+    <ul>
+        <li>The top of the webpage will display the location you are to visit.</li>
+        <li>When you reach the building, look for a QR code to scan and press the "Check in" button to scan the code and check in.</li>
+        <li>You'll earn points for each location you visit.</li>
+        <li>Each location also has additional activities you can perform to earn bonus points, which can be viewed by clicking the icon to the right of the "Check in" button.</li>
+        <li>Press on the trophy icon in the bottom left corner to view the leaderboard and see how your team ranks.</li>
+        <li>The map icon will bring up the map view and display your next location as a pin on the map.</li>
+        <li>You can also bring up an FAQ page if you get lost or confused by tapping the icon in the far right.</li>
+    </ul>
       </div>
 
       <div id="leaderboard-container">
