Redesigned the server side web pages
Redesigned the server side web pages to the spec of the team and reformatted the code for easy viewing and removal of redundant code.

--- a/Login validation test app/static/css/LoginPageStyle.css
+++ b/Login validation test app/static/css/LoginPageStyle.css
@@ -1,7 +1,6 @@
 .login{
 	box-sizing: border-box;
-    background:#48c77d;
-    position: static;
+    background:#0A8754;
 	padding: 15px;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
     font-size: 15pt;
