--- a/Login validation test app/static/css/SignUpPageStyle.css
+++ b/Login validation test app/static/css/SignUpPageStyle.css
@@ -1,7 +1,6 @@
 .signup{
 	box-sizing: border-box;
-	background:#48c77d;
-    position: static;
+	background:#0A8754;
 	padding: 15px;
     font-family: "Avenir", Verdana, Geneva, sans-serif;
     font-size: 15pt;
@@ -16,7 +15,6 @@
 	border-radius: 20px;
 	font-size: larger;
 	padding: 10px;
-	width: 50%;
 }
 
 #tutors {
@@ -24,7 +22,6 @@
 	font-size: larger;
 	text-align-last: center;
 	padding: 15px;
-	width:50%;
 }
 
 input[type=checkbox] {
