--- a/Login validation test app/templates/login-page.html
+++ b/Login validation test app/templates/login-page.html
@@ -12,15 +12,12 @@
         </div>
 
 		<div class="login">
-			<p style="font-size: 30pt">CONTINUE YOUR START TO UNIVERSITY</p>
+			<p style="font-size: 30pt; color: #FFFFFF;">CONTINUE YOUR START TO UNIVERSITY</p>
             <form action="/login" method = 'post'>
 				<input type = "text" id = "username" name = "username" placeholder="Username" required>
 				<br /><br />
 				<input type = "password" id = "password" name = "password" placeholder="Password" required>
 				<br /><br />
-				<p style="font-size: 15pt" align="right">
-				FORGOT PASSWORD?
-				</p>
 				<div class="left-button">
 					<button onclick="location.href= '/home';" class="btn"><img src="static/img/back.png" alt="back"></button>
 				</div>
