--- a/Login validation test app/templates/signup-page.html
+++ b/Login validation test app/templates/signup-page.html
@@ -12,33 +12,39 @@
         </div>
 
 		<div class="signup">
-			<p style="font-size: 30pt">BEGIN YOUR START TO UNIVERSITY</p>
+			<p style="font-size: 30pt; color: #FFFFFF;">BEGIN YOUR START TO UNIVERSITY</p>
             <form action="/signup" method="post" style="padding:10px 0;">
-				<input type = "text" id = "firstname" placeholder="First Name" name="firstname" pattern="[A-Za-z]{1,}" required>
+				<input type = "text" id = "firstname" placeholder="First Name" name="firstname" 
+					pattern="[A-Za-z]{1,}" 
+					required>
 				<br /><br />
-				<input type = "text" id = "surname" placeholder="Surname" name="surname" pattern="[A-Za-z]{1,}" required>
+				<input type = "text" id = "surname" placeholder="Surname" name="surname" 
+					pattern="[A-Za-z]{1,}" 
+					required>
 				<br /><br />
 				<input type = "email" id = "email" placeholder="Email" name = "email"
 					pattern=".+@exeter.ac.uk"
 					title="Must by your exeter.ac.uk email address"
 					required>
 				<br /><br />
-				<input type = "text" id = "username" name = "username" placeholder="Username" pattern="[A-Za-z0-9]{1,15}" required>
+				<input type = "text" id = "username" placeholder="Username" name = "username" 
+					pattern="[A-Za-z0-9]{1,15}" 
+					required>
 				<br><br>
-				<input type = "password" id = "password" name="password" placeholder="Password"
+				<input type = "password" id = "password" placeholder="Password" name="password"
 					pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
 					title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
 					required>
 				<br /><br />
 				<select id="tutors" name="tutor" required>
-					<option class="options" value="" disabled selected hidden>Please select a tutor</option>
+					<!-- <option class="options" value="" disabled selected hidden>Please select a tutor</option>
 					<option class="options" value="Anna">Anna</option>
 					<option class="options" value="Mike">Mike</option>
-					<option class="options" value="John">John</option>
+					<option class="options" value="John">John</option> -->
 				</select>
 				<br /><br />
 				<input type="checkbox" id="terms" name="terms" value="agree" required>
-				<label style="font-size: larger;" for="terms"> I accept the following <a target="blank" href="Terms.html">terms of service</a> and <a target = "blank" href = "Privacy.html">privacy policy</a>.</label><br>
+				<label style="font-size: larger; color: #FFFFFF;" for="terms"> I accept the following <a target="blank" href="Terms.html">terms of service</a> and <a target = "blank" href = "Privacy.html">privacy policy</a>.</label><br>
 				<div class="left-button">
 					<button onclick="location.href= '/home';" class="btn"><img src="static/img/back.png" alt="back"></button>
 				</div>
