Edited the tutor dropdown
Started writing the JavaScript to add tutors to the dropdown menu when the signup page is loaded

--- a/Login validation test app/templates/signup-page.html
+++ b/Login validation test app/templates/signup-page.html
@@ -4,6 +4,7 @@
         <title>Exeter Orientation</title>
         <link rel="stylesheet" type="text/css" href="static/css/SignUpPagestyle.css">
         <link rel="stylesheet" type="text/css" href="static/css/HomePageStyle.css">
+		<script src="static/js/tutors.js"></script>
     </head>
 
     <body>
@@ -36,7 +37,7 @@
 					title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters"
 					required>
 				<br /><br />
-				<select id="tutors" name="tutor" required>
+				<select id="tutors" name="tutor" required> 
 					<!-- <option class="options" value="" disabled selected hidden>Please select a tutor</option>
 					<option class="options" value="Anna">Anna</option>
 					<option class="options" value="Mike">Mike</option>
