--- a/Login validation test app/static/css/overlayui.css
+++ b/Login validation test app/static/css/overlayui.css
@@ -1,4 +1,5 @@
 #overlay-container {
+  box-sizing: border-box;
   display: none;
   overflow: hidden;
 
@@ -11,9 +12,79 @@
   background-color: #ACCEEA;
 
   border-style: solid;
-  border-width: 3px;
+  border-width: 2vh;
   border-color: #E2EAF0;
   border-radius: 8px;
+}
+
+#welcome-container {
+  display: none;
+
+  padding-left: 4vw;
+  padding-right: 4vw;
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
+}
+
+#welcome-exit-button {
+  padding-left: 0px;
+  padding-right: 0px;
+  margin: 0px;
+  border-width: 0px;
+
+  background-color: #0A8754;
+
+  position: sticky;
+  top: 0px;
+  left: 0px;
+
+  width: 100%;
+  height: 50px;
+
+  text-align: center;
+
+  font-size: 20px;
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
+}
+
+#welcome-button-txt {
+  padding-top: 12px;
+  color: #FFFFFF;
+}
+
+#qr-scanner-container {
+  display: none;
+}
+
+#leaderboard-container {
+  display: none;
+}
+
+#map-container {
+  display: none;
+
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 100%;
+	width: 100%;
+}
+
+#achievements-container {
+  display: none;
+}
+
+#chatbot-container {
+  display: none;
+
+  overflow: scroll;
+
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
+  margin-left: 2%;
+  margin-bottom: 2%;
+  margin-top: 2%;
 }
 
 .overlay {
@@ -26,14 +97,95 @@
 
 .qrPreviewVideo {
   position: fixed;
-  left: 10vw;
-  top: 25%;
+  left: 10%;
+  top: 5%;
 
   max-width: 80%;
-  max-height: 40%;
+  max-height: 70%;
 
   border-style: solid;
   border-width: 3px;
   border-color: #E2EAF0;
   border-radius: 8px;
+}
+
+#navigation-background {
+  filter: opacity(0%);
+
+  margin: 0px;
+  padding: 0px;
+
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+
+  height: 113px;
+  width: 100%;
+}
+
+#leaderboard-table {
+  table-layout: fixed;
+  width: 100%;
+  height: 100%;
+
+  border-collapse: collapse;
+
+  text-align: center;
+  border-style: none;
+  border-color: #508CA4;
+  font-family: "Avenir", Verdana, Geneva, sans-serif;
+  color:  #676767;
+}
+
+.leaderboard-row {
+  font-size: 5vw;
+  border-style: solid;
+  border-width: 1vh;
+  border-color: #508CA4;
+}
+
+.leaderboard-header {
+  font-size: 10vw;
+
+  background-color: #508CA4;
+  color: #E2EAF0;
+
+  border-style: solid;
+  border-width: 1vh;
+  border-color: #508CA4;
+}
+
+
+.leaderboard-data {
+  border-style: solid;
+  border-width: 1vh;
+  border-color: #508CA4;
+  background-color: #E2EAF0;
+}
+
+.loader {
+  position: fixed;
+  left: calc(50% - 70px);
+  top: calc(50% - 120px);
+
+  border: 16px solid #E2EAF0;
+  border-top: 16px solid #0A8754;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+#leaderboard-loader {
+  border: 16px solid #ACCEEA;
+  border-top: 16px solid #0A8754;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
