Added the terms and privacy pages to the server side app
Added the terms and privacy pages to the server side app and modified the HTML and CSS files to help with formatting correctly and connections between pages.

--- a/Login validation test app/templates/signup-page.html
+++ b/Login validation test app/templates/signup-page.html
@@ -45,7 +45,7 @@
 				</select>
 				<br /><br />
 				<input type="checkbox" id="terms" name="terms" value="agree" required>
-				<label style="font-size: larger; color: #FFFFFF;" for="terms"> I accept the following <a target="blank" href="Terms.html">terms of service</a> and <a target = "blank" href = "Privacy.html">privacy policy</a>.</label><br>
+				<label style="font-size: larger; color: #FFFFFF;" for="terms"> I accept the following <a target="blank" href='/terms'>terms of service</a> and <a target = "blank" href= '/privacy'>privacy policy</a>.</label><br>
 				<div class="left-button">
 					<button onclick="location.href= '/home';" class="btn"><img src="static/img/back.png" alt="back"></button>
 				</div>
