--- a/Login validation test app/static/css/PrivacyStyle.css
+++ b/Login validation test app/static/css/PrivacyStyle.css
@@ -8,22 +8,6 @@ h1{
     margin-top: 2%;
 }
 
-.General{
-    padding: 1.5% 0 0 5%
-}
-
-.Definitions{
-    padding: 1.5% 0 0 5%
-}
-
-.PersonalData{
-    padding: 1.5% 0 0 5%
-}
-
-.RetentionOfPersonalData{
-    padding: 1.5% 0 0 5%
-}
-
-.ContactUs{
-    padding: 1.5% 0 0 5%
+div {
+	padding: 1.5% 5% 0
 }
