--- a/Login validation test app/templates/home-page.html
+++ b/Login validation test app/templates/home-page.html
@@ -2,6 +2,8 @@
 <html>
     <head>
 		<title>Exeter Orientation</title>
+		<meta name="viewport" content="width=device-width, initial-scale=0.5,
+			user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="static/css/HomePageStyle.css">
     </head>
     <body>
@@ -14,11 +16,11 @@
 		</div>
 
         <div class="left-button">
-			<button onclick="location.href= '/login-page';" class="btn"><img src="static/img/login.png" alt="login"></button>
+			<button type="button" onclick="location.href= '/login';" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/login.png" alt="login"></button>
         </div>
 
         <div class="right-button">
-			<button onclick="location.href = '/signup-page';" class="btn"><img src="static/img/SignUp.png" alt="signup"></button>
+			<button type="button" onclick="location.href = '/signup';" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/SignUp.png" alt="signup"></button>
         </div>
     </body>
 </html>
