--- a/Login validation test app/templates/signup-page.html
+++ b/Login validation test app/templates/signup-page.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Exeter Orientation</title>
+		<meta name="viewport" content="width=device-width, initial-scale=0.5,
+			user-scalable=no">
         <link rel="stylesheet" type="text/css" href="static/css/SignUpPagestyle.css">
         <link rel="stylesheet" type="text/css" href="static/css/HomePageStyle.css">
 		<script src="static/js/tutors.js"></script>
@@ -13,7 +15,7 @@
         </div>
 
 		<div class="signup">
-			<p style="font-size: 30pt; color: #FFFFFF;">BEGIN YOUR START TO UNIVERSITY</p>
+			<h2 style="font-size: 25pt; color: #FFFFFF;">BEGIN YOUR START TO UNIVERSITY</h2>
             <form action="/signup" method="post" style="padding:10px 0;">
 				<input type = "text" id = "firstname" placeholder="First Name" name="firstname" 
 					pattern="[A-Za-z]{1,}" 
@@ -46,11 +48,15 @@
 				<br /><br />
 				<input type="checkbox" id="terms" name="terms" value="agree" required>
 				<label style="font-size: larger; color: #FFFFFF;" for="terms"> I accept the following <a target="blank" href='/terms'>terms of service</a> and <a target = "blank" href= '/privacy'>privacy policy</a>.</label><br>
+				<br /><br />
+				{% if signupError %}
+					<p style="font-size: 20pt; color: #ff6666;">Username or email already in use!</p>
+				{% endif %}
 				<div class="left-button">
-					<button onclick="location.href= '/home';" class="btn"><img src="static/img/back.png" alt="back"></button>
+					<button type="button" onclick="location.href= '/home';" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/back.png" alt="back"></button>
 				</div>
 				<div class="right-button">
-					<button type="submit" class="btn"><img src="static/img/SignUp.png" alt="signup"></button>
+					<button type="submit" class="btn"><img style="max-width: 80%; height: auto;" src="static/img/SignUp.png" alt="signup"></button>
 				</div>
 			</form>
         </div>
