Added 'add route' page and created admin account

--- a/Login validation test app/templates/game-keeper-page.html
+++ b/Login validation test app/templates/game-keeper-page.html
@@ -7,8 +7,8 @@
     <body>
         <ul>
             <li><img src="static/img/logo.PNG" alt="Exeter Expedition Logo" class="responsive" width="600" height="400"></li>
-            <li><a class="active" href='/game-keeper'>Home</a></li>
-            <li><a href="#route">Add Route</a></li>
+            <li><a class="active" type="button" href='/game-keeper'>Home</a></li>
+            <li><a type="button" href='/add-route'>Add Route</a></li>
             <li><a type="button" href='/add-tutor'>Add Tutor</a></li>
             <li><a type="button" href='/add-game-keeper'>Add Game Keeper</a></li>
             <li><a href="#LogOut">Log Out</a></li>
